test/src/e2e_vm_tests/test_programs/should_fail/config_time_constants/src/main.sw
script;

fn main() -> u64 {
    let addr = some_contract_addr;

    return 0;
}
